CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8.2-dev

distributed
----------------------
* Fix bug where DistributedMasterBuilder was not delegating isTimeBuilder() to the nestedBuilder, which meant that forcing a build with only a single time based distributed build would fail. Reported by Spencer Smith

ExecBuilder
----------------------
* Log exceptions coming back from the ScriptRunner.

Maven2Builder
----------------------
* Add new attribute "siteGoal" that are run after the normal "goal", such as publishing a site even if a test fails (CC-877). Submitted by Jene Jasper

StarTeam
----------------------
* Fix problem building because of dependency on PluginRegistryTest by adding the main/test classes to the common.xml classpath (CC-878). Patch by DKelly

TimeBuild
----------------------
* Fix bug where more than 1 day had elapsed since the last build. Reported by Nhat Tran

XcodeBuilder
----------------------
* Fix bug with using nested arguments. XcodeBuilder.Arg was not public.

CruiseControl Release Notes - 2.8.1

binary release:
----------------------
* Set jetty.logs to get CCDIR/logs. This prevents a Jetty error when you run CC from a somewhere other than CCDIR and the logs directory doesn't exist in the local directory.

documentation
----------------------
* Add more explaination to ldapmapper (CC-870). Patch by Florian Rosenauer
* Add missing docs for command-line options log4jconfig, jettyxml, agentutil. Reported by David Williams
* Clairfiy that cclastgoodbuildtimestamp and cclastbuildtimestamp are only available if there has been a prior build (CC-193). Reported by Clifton McLellan

build loop
======================

AntBuilder
----------------------
* Fix issue where loggers didn't run under JDK 1.4. Reported by David Williams

ExecBuilder
----------------------
* Fix bug where setting errorStr would prevent output from showing up in build log. Reported by Florian Rosenauer
